# teambot

./: .env-sample  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  stages.yaml  teambot.json  test_overlay_fix.py
.agent-tracking/changes/: 20260128-sdk-streaming-long-tasks-changes.md  20260128-split-pane-interface-changes.md  20260203-shared-context-reference-changes.md  20260204-model-selection-changes.md  20260205-output-pane-enhancement-changes.md  20260206-stages-yaml-schema-improvement-changes.md  20260209-default-agent-switching-changes.md  20260209-startup-animation-changes.md  20260209-unknown-agent-validation-changes.md  20260210-copilot-sdk-upgrade-changes.md  20260210-enhanced-text-input-changes.md  20260210-parallel-stage-groups-changes.md  20260210-runtime-validator-fix-changes.md  20260211-notification-ux-improvements-changes.md  20260211-realtime-notifications-changes.md  20260212-notify-pseudo-agent-changes.md  20260213-remove-overlay-changes.md  20260213-run-directly-distribution-changes.md
.agent-tracking/details/: 20260122-teambot-details.md  20260128-split-pane-interface-details.md  20260129-file-based-orchestration-details.md  20260203-shared-context-reference-details.md  20260204-model-selection-details.md  20260205-output-pane-enhancement-details.md  20260206-stages-yaml-schema-improvement-details.md  20260209-default-agent-switching-details.md  20260209-startup-animation-details.md  20260209-unknown-agent-validation-details.md  20260210-copilot-sdk-upgrade-details.md  20260210-enhanced-text-input-details.md  20260210-parallel-stage-groups-details.md  20260210-runtime-validator-fix-details.md  20260211-notification-ux-improvements-details.md  20260211-realtime-notifications-details.md  20260212-notify-pseudo-agent-details.md  20260213-remove-overlay-details.md  20260213-run-directly-distribution-details.md
.agent-tracking/feature-spec-sessions/: agent-output-reference-syntax.state.json  copilot-sdk-upgrade.state.json  default-agent-switching.state.json  enhanced-multi-line-text-input.state.json  parallel-stage-groups.state.json  realtime-notifications.state.json  remove-overlay.state.json  run-directly-downloads.state.json  sdk-streaming-long-tasks.state.json  split-pane-interface.state.json  startup-animation.state.json  teambot.state.json  unknown-agent-validation.state.json
.agent-tracking/implementation-reviews/: 20260129-live-agent-status-panel-final-review.md  20260204-model-selection-final-review.md  20260206-stages-yaml-schema-improvement-final-review.md  20260209-default-agent-switching-final-review.md  20260210-copilot-sdk-upgrade-final-review.md  20260210-runtime-validator-fix-final-review.md  20260211-parallel-stage-groups-final-review.md  20260211-realtime-notifications-final-review.md  20260213-run-directly-distribution-final-review.md
.agent-tracking/plan-reviews/: 20260122-teambot-plan-review.md  20260123-interactive-mode-plan-review.md  20260123-parallel-execution-plan-review.md  20260123-persistent-overlay-plan-review.md  20260128-sdk-streaming-long-tasks-plan-review.md  20260128-split-pane-interface-plan-review.md  (+7 more)
.devcontainer/: devcontainer.json  post-script.sh
.github/: copilot-instructions.md
.teambot/: orchestration_state.json
docker/: .dockerignore  Dockerfile
docs/: sdd-objective-template.md
src/: app.py  load_env.py
tests/: __init__.py  conftest.py  test_acceptance_distribution.py  test_acceptance_output_pane.py  test_acceptance_unknown_agent.py  test_acceptance_unknown_agent_validation.py  test_acceptance_validation.py  test_agent_runner.py  test_cli.py  test_default_agent_acceptance.py  test_distribution.py  test_e2e.py  test_integration.py  test_notification_acceptance.py  test_notify_acceptance_validation.py  test_orchestrator.py  test_overlay_removal_acceptance.py  test_sdk_upgrade_acceptance.py  test_stages_yaml_acceptance.py  test_window_manager.py
(+435 files in other folders)
