[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "copilot-teambot"
version = "0.2.0"
description = "CLI wrapper for GitHub Copilot CLI enabling autonomous AI agent teams"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "TeamBot Contributors" }
]
keywords = ["copilot", "ai", "agent", "automation", "cli", "github"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
  "python-dotenv>=1.0.0",
  "python-frontmatter>=1.0.0",
  "rich>=13.0.0",
  "github-copilot-sdk==0.1.23",
  "textual>=0.47.0",
  "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/teambot-ai/teambot"
Documentation = "https://github.com/teambot-ai/teambot/tree/main/docs"
Repository = "https://github.com/teambot-ai/teambot"
Issues = "https://github.com/teambot-ai/teambot/issues"

[dependency-groups]
dev = [
  "ruff>=0.8.0",
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "pytest-mock>=3.12.0",
  "pytest-asyncio>=0.23.0",
  "textual[dev]>=0.47.0",
  "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
teambot = "teambot.cli:main"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src/teambot --cov-report=term-missing -m 'not acceptance'"
asyncio_mode = "auto"
markers = [
    "acceptance: marks tests as acceptance tests (slow, may duplicate CI checks; run with -m acceptance)",
    "slow: marks tests as slow running (run with -m slow)",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/teambot"]
